--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,14 +87,14 @@ services:
     networks:
       vpcbr:
         ipv4_address: 10.5.0.8
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: secret
-      MONGO_INITDB_DATABASE: flaskdb
-      MONGODB_DATA_DIR: /data/db
-      MONDODB_LOG_DIR: /dev/null
-    volumes:
-      - mongodbdata:/data/db
+    #environment:
+    #  MONGO_INITDB_ROOT_USERNAME: root
+    #  MONGO_INITDB_ROOT_PASSWORD: secret
+    #  MONGO_INITDB_DATABASE: flaskdb
+    #  MONGODB_DATA_DIR: /data/db
+    #   MONDODB_LOG_DIR: /dev/null
+    # volumes:
+    #   - mongodbdata:/data/db
 
   elasticsearch:
     build:
@@ -144,26 +144,3 @@ networks:
      config:
        - subnet: 10.5.0.0/16
          gateway: 10.5.0.1
-
-flask:
-  build:
-    context: app
-    dockerfile: Dockerfile
-  container_name: flask
-  image: digitalocean.com/flask-python:3.6
-  restart: unless-stopped
-  environment:
-    APP_ENV: "prod"
-    APP_DEBUG: "False"
-    APP_PORT: 5000
-    MONGODB_DATABASE: flaskdb
-    MONGODB_USERNAME: root
-    MONGODB_PASSWORD: secret
-    MONGODB_HOSTNAME: 10.5.0.8
-  volumes:
-    - appdata:/var/www
-  depends_on:
-    - mongodb
-  networks:
-    - frontend
-    - backend
